--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,71 +2,755 @@
 ---
 
 @string{aps = {American Physical Society,}}
+@string{arxiv  = {arXiv}}
+@string{mm  = {MM}}
+@string{mmf = {ACM International Conference on Multimedia,}}
+@string{cviu  = {CVIU}}
+@string{cviuf = {Computer Vision and Image Understanding,}}
+@string{cvpr  = {CVPR}}
+@string{cvprf = {IEEE Conference on Computer Vision and Pattern Recognition,}}
+@string{icmr  = {ICMR}}
+@string{icmrf = {ACM International Conference on Multimedia Retrieval,}}
+@string{iccv  = {ICCV}}
+@string{iccvf = {IEEE International Conference on Computer Vision,}}
+@string{eccv  = {ECCV}}
+@string{eccvf = {European Conference on Computer Vision,}}
+@string{ijcv  = {IJCV}}
+@string{ijcvf = {International Journal of Computer Vision,}}
+@string{tmm  = {TMM}}
+@string{tmmf = {IEEE Transactions on Multimedia,}}
+@string{tpami  = {TPAMI}}
+@string{tpamif = {IEEE Transactions on Pattern Analysis and Machine Intelligence,}}
+@string{tip  = {TIP}}
+@string{tipf = {IEEE Transactions on Image Processing,}}
+@string{iclr  = {ICLR}}
+@string{iclrf = {International Conference on Learning Representations,}}
+@string{icml  = {ICML}}
+@string{icmlf = {International Conference on Machine Learning,}}
+@string{bmvc  = {BMVC}}
+@string{bmvcf = {British Machine Vision Conference,}}
+@string{icpr  = {ICPR}}
+@string{icprf = {International Conference on Pattern Recognition,}}
+@string{dv3  = {3DV}}
+@string{dv3f = {International Conference on 3D Vision,}}
+@string{midl  = {MIDL}}
+@string{midlf = {Medical Imaging in Deep Learning,}}
+@string{neurips  = {NeurIPS}}
+@string{neuripsf = {Neural Information Processing Systems,}}
+@string{uai  = {UAI}}
+@string{uaif = {Association for Uncertainty in Artificial Intelligence,}}
+@string{arxiv = {arXiv,}}
+@string{arxivf = {arXiv,}}
 
-@book{einstein1956investigations,
+@inproceedings{gavves2010landmark,
+  title={Landmark image retrieval using visual synonyms},
+  author={Gavves, Efstratios and Snoek, Cees G.M.},
+  booktitle=mmf,
+  abbr=mm,
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+  year={2010}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{li2011personalizing,
+  title={Personalizing automated image annotation using cross-entropy},
+  author={Li, Xirong and Gavves, Efstratios and Snoek, Cees  and Worring, Marcel and Smeulders, Arnold },
+  booktitle=mmf,
+  abbr=mm,
+  pages={233--242},
+  year={2011}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+@article{gavves2012visual,
+  title={Visual synonyms for landmark image retrieval},
+  author={Gavves, Efstratios and Snoek, Cees  and Smeulders, Arnold },
+  journal=cviuf,
+  abbr=cviu,
+  bibtex_show={true},
+  year={2012}
+}
+
+@inproceedings{gavves2012convex,
+  title={Convex reduction of high-dimensional kernels for visual classification},
+  author={Gavves, Efstratios and Snoek, Cees  and Smeulders, Arnold },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2012}
+}
+
+@inproceedings{mazloom2013searching,
+  title={Searching informative concept banks for video event detection},
+  author={Mazloom, Masoud and Gavves, Efstratios and van de Sande, Koen and Snoek, Cees},
+  booktitle=icmrf,
+  abbr=icmr,
+  bibtex_show={true},
+  pages={255--262},
+  year={2013}
+}
+
+@inproceedings{gavves2013fine,
+  title={Fine-grained categorization by alignments},
+  author={Gavves, Efstratios and Fernando, Basura and Snoek, Cees  and Smeulders, Arnold  and Tuytelaars, Tinne},
+  booktitle=iccvf,
+  abbr=iccv,
+  bibtex_show={true},
+  year={2013}
+}
+
+@inproceedings{li2013codemaps,
+  title={Codemaps-seent, classify and search objects locally},
+  author={Li, Zhenyang and Gavves, Efstratios and van de Sande, Koen EA and Snoek, Cees  and Smeulders, Arnold },
+  booktitle=iccvf,
+  abbr=iccv,
+  bibtex_show={true},
+  year={2013}
+}
+
+@inproceedings{mensink2014costa,
+  title={Costa: Co-occurrence statistics for zero-shot classification},
+  author={Mensink, Thomas and Gavves, Efstratios and Snoek, Cees },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2014}
+}
+
+@inproceedings{tao2014locality,
+  title={Locality in generic instance search from one example},
+  author={Tao, Ran and Gavves, Efstratios and Snoek, Cees  and Smeulders, Arnold },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2014}
+}
+
+@inproceedings{li2014attributes,
+  title={Attributes make sense on seented objects},
+  author={Li, Zhenyang and Gavves, Efstratios and Mensink, Thomas and Snoek, Cees },
+  booktitle=eccvf,
+  abbr=eccv,
+  bibtex_show={true},
+  year={2014}
+}
+
+@article{gavves2015local,
+  title={Local alignments for fine-grained categorization},
+  author={Gavves, Efstratios and Fernando, Basura and Snoek, Cees  and Smeulders, Arnold  and Tuytelaars, Tinne},
+  journal=ijcvf,
+  abbr=ijcv,
+  bibtex_show={true},
+  year={2015}
+}
+
+@article{mazloom2014conceptlets,
+  title={Conceptlets: Selective semantics for classifying video events},
+  author={Mazloom, Masoud and Gavves, Efstratios and Snoek, Cees },
+  journal=tmmf,
+  abbr=tmm,
+  bibtex_show={true},
+  year={2014}
+}
+
+@inproceedings{snoek2010mediamill,
+  title={The MediaMill TRECVID 2010 semantic video search engine},
+  author={Snoek, Cees and Sande, Kvd and Rooij, OD and Huurnink, Bouke and Gavves, Efstratios and Odijk, Daan and Rijke, M and Gevers, Theo and Worring, Marcel and Koelma, D and others},
+  booktitle={TRECVID workshop},
+  year={2010}
+}
+
+@inproceedings{fernando2015modeling,
+  title={Modeling video evolution for action recognition},
+  author={Fernando, Basura and Gavves, Efstratios and Oramas, Jose M and Ghodrati, Amir and Tuytelaars, Tinne},
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2015}
+}
+
+@inproceedings{jia2015guiding,
+  title={Guiding the long-short term memory model for image caption generation},
+  author={Jia, Xu and Gavves, Efstratios and Fernando, Basura and Tuytelaars, Tinne},
+  booktitle=iccvf,
+  abbr=iccv,
+  bibtex_show={true},
+  year={2015}
+}
+
+@inproceedings{fernando2015learning,
+  title={Learning to rank based on subsequences},
+  author={Fernando, Basura and Gavves, Efstratios and Muselet, Damien and Tuytelaars, Tinne},
+  booktitle=iccvf,
+  abbr=iccv,
+  bibtex_show={true},
+  year={2015}
+}
+
+@inproceedings{gavves2015active,
+  title={Active transfer learning with zero-shot priors: Reusing past datasets for future tasks},
+  author={Gavves, Efstratios and Mensink, Thomas and Tommasi, Tatiana and Snoek, Cees  and Tuytelaars, Tinne},
+  booktitle=iccvf,
+  abbr=iccv,
+  bibtex_show={true},
+  year={2015}
+}
+
+@inproceedings{rematas2016deep,
+  title={Deep reflectance maps},
+  author={Rematas, Konstantinos and Ritschel, Tobias and Fritz, Mario and Gavves, Efstratios and Tuytelaars, Tinne},
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2016}
+}
+
+@article{fernando2016rank,
+  title={Rank pooling for action recognition},
+  author={Fernando, Basura and Gavves, Efstratios and Oramas, Jos{\'e} and Ghodrati, Amir and Tuytelaars, Tinne},
+  journal=tpamif,
+  abbr=tpami,
+  bibtex_show={true},
+  year={2016}
+}
+
+@inproceedings{bilen2016dynamic,
+  title={Dynamic image networks for action recognition},
+  author={Bilen, Hakan and Fernando, Basura and Gavves, Efstratios and Vedaldi, Andrea and Gould, Stephen},
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2016}
+}
+
+@inproceedings{de2016online,
+  title={Online action detection},
+  author={De Geest, Roeland and Gavves, Efstratios and Ghodrati, Amir and Li, Zhenyang and Snoek, Cees and Tuytelaars, Tinne},
+  booktitle=eccvf,
+  abbr=eccv,
+  bibtex_show={true},
+  year={2016}
+}
+
+@inproceedings{tao2016siamese,
+  title={Siamese instance search for tracking},
+  author={Tao, Ran and Gavves, Efstratios and Smeulders, Arnold },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2016}
+}
+
+@article{li2018videolstm,
+  title={Videolstm convolves, attends and flows for action recognition},
+  author={Li, Zhenyang and Gavrilyuk, Kirill and Gavves, Efstratios and Jain, Mihir and Snoek, Cees },
+  journal=cviuf,
+  abbr=cviu,
+  bibtex_show={true},
+  year={2018}
+}
+
+@article{haije2016automatic,
+  title={Automatic comment generation using a neural translation model},
+  author={Haije, Tjalling and Intelligentie, Bachelor Opleiding Kunstmatige and Gavves, E and Heuer, H},
+  journal={Inf. Softw. Technol},
+  year={2016}
+}
+
+@inproceedings{fernando2017self,
+  title={Self-supervised video representation learning with odd-one-out networks},
+  author={Fernando, Basura and Bilen, Hakan and Gavves, Efstratios and Gould, Stephen},
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2017}
+}
+
+@article{bilen2017action,
+  title={Action recognition with dynamic image networks},
+  author={Bilen, Hakan and Fernando, Basura and Gavves, Efstratios and Vedaldi, Andrea},
+  journal=tpamif,
+  abbr=tpami,
+  bibtex_show={true},
+  year={2017}
+}
+
+@inproceedings{hussein2017unified,
+  title={Unified embedding and metric learning for zero-exemplar event detection},
+  author={Hussein, Noureldien and Gavves, Efstratios and Smeulders, Arnold },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2017}
+}
+
+@inproceedings{o2017temporally,
+  title={Temporally Efficient Deep Learning with Spikes},
+  author={O'Connor, Peter and Gavves, Efstratios and Welling, Max},
+  booktitle=iclrf,
+  abbr=iclr,
+  bibtex_show={true},
+  year={2017}
+}
+
+@inproceedings{li2017tracking,
+  title={Tracking by natural language specification},
+  author={Li, Zhenyang and Tao, Ran and Gavves, Efstratios and Snoek, Cees  and Smeulders, Arnold },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2017}
+}
+
+@article{georgoulis2017reflectance,
+  title={Reflectance and natural illumination from single-material specular objects using deep learning},
+  author={Georgoulis, Stamatios and Rematas, Konstantinos and Ritschel, Tobias and Gavves, Efstratios and Fritz, Mario and Van Gool, Luc and Tuytelaars, Tinne},
+  journal=tpamif,
+  abbr=tpami,
+  bibtex_show={true},
+  year={2017}
+}
+
+@article{tao2017tracking,
+  title={Tracking for half an hour},
+  author={Tao, Ran and Gavves, Efstratios and Smeulders, Arnold },
+  journal={arXiv preprint arXiv:1711.10217},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2017}
+}
+
+@inproceedings{snoek2017university,
+  title={University of Amsterdam and Renmin University at TRECVID 2017: Searching Video, Detecting Events and Describing Video.},
+  author={Snoek, Cees  and Li, Xirong and Xu, Chaoxi and Koelma, Dennis C},
+  booktitle={TRECVID},
+  bibtex_show={true},
+  year={2017}
+}
+
+@inproceedings{scheepers2018improving,
+  title={Improving word embedding compositionality using lexicographic definitions},
+  author={Scheepers, Thijs and Kanoulas, Evangelos and Gavves, Efstratios},
+  booktitle={World Wide Web Conference},
+  bibtex_show={true},
+  abbr={WWW},
+  year={2018}
+}
+
+@inproceedings{valmadre2018long,
+  title={Long-term tracking in the wild: A benchmark},
+  author={Valmadre, Jack and Bertinetto, Luca and Henriques, Joao F and Tao, Ran and Vedaldi, Andrea and Smeulders, Arnold  and Torr, Philip HS and Gavves, Efstratios},
+  booktitle=eccvf,
+  abbr=eccv,
+  bibtex_show={true},
+  year={2018}
+}
+
+@inproceedings{oh2018bock,
+  title={BOCK: Bayesian Optimization with Cylindrical Kernels},
+  author={Oh, ChangYong and Gavves, Efstratios and Welling, Max},
+  booktitle=icmlf,
+  abbr=icml,
+  bibtex_show={true},
+  year={2018}
+}
+
+@inproceedings{liao2018searching,
+  title={Searching and Matching Texture-free 3D Shapes in Images},
+  author={Liao, Shuai and Gavves, Efstratios and Snoek, Cees },
+  booktitle=icmrf,
+  abbr=icmr,
+  bibtex_show={true},
+  year={2018}
+}
+
+@inproceedings{o2018training,
+  title={Training a network of spiking neurons with equilibrium propagation},
+  author={O'Connor, Peter and Gavves, Efstratios and Welling, Max},
+  booktitle=aistatsf,
+  abbr=aistats,
+  bibtex_show={true},
+  year={2018}
+}
+
+@inproceedings{ghodrati2018video,
+  title={Video Time: Properties, Encoders and Evaluation},
+  author={Ghodrati, Amir and Gavves, Efstratios and Snoek, Cees },
+  booktitle=bmvcf,
+  abbr=bmvc,
+  bibtex_show={true},
+  year={2018}
+}
+
+@inproceedings{shkodrani2018dynamic,
+  title={Dynamic Adaptation on Non-Stationary Visual Domains},
+  author={Shkodrani, Sindi and Hofmann, Michael and Gavves, Efstratios},
+  booktitle={European Conference on Computer Vision, Workshop in Transferring and Adapting Source Knowledge in Computer Vision and VISDA Challenge},
+  bibtex_show={true},
+  year={2018}
+}
+
+
+@inproceedings{louizos2018relaxed,
+  title={Relaxed quantization for discretized neural networks},
+  author={Louizos, Christos and Reisser, Matthias and Blankevoort, Tijmen and Gavves, Efstratios and Welling, Max},
+  booktitle=iclrf,
+  abbr=iclr,
+  bibtex_show={true},
+  year={2018}
+}
+
+@inproceedings{hussein2019timeception,
+  title={Timeception for complex action recognition},
+  author={Hussein, Noureldien and Gavves, Efstratios and Smeulders, Arnold },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2019}
+}
+
+@inproceedings{o2019initialized,
+  title={Initialized Equilibrium Propagation for Backprop-Free Training},
+  author={O'Connor, Peter and Gavves, Efstratios and Welling, Max},
+  booktitle=iclrf,
+  abbr=iclr,
+  bibtex_show={true},
+  year={2019}
+}
+
+@inproceedings{kristan2018sixth,
+  title={The sixth visual object tracking vot2018 challenge results},
+  author={Kristan, Matej and Leonardis, Ales and Matas, Jiri and Felsberg, Michael and Pflugfelder, Roman and ˇCehovin Zajc, Luka and Vojir, Tomas and Bhat, Goutam and Lukezic, Alan and Eldesokey, Abdelrahman and others},
+  booktitle={IEEE/CVF Proceedings of the European Conference on Computer Vision Workshops},
+  bibtex_show={true},
+  year={2018}
+}
+
+@inproceedings{fernando2017self,
+  title={Self-Supervised Video Representation Learning With Odd-One-Out Networks},
+  author={Fernando, Basura and Bilen, Hakan and Gavves, Efstratios and Gould, Stephen and others},
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2017}
+}
+
+@inproceedings{liao2019spherical,
+  title={Spherical regression: Learning viewpoints, surface normals and 3d rotations on n-spheres},
+  author={Liao, Shuai and Gavves, Efstratios and Snoek, Cees },
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2019}
+}
+
+@inproceedings{o2019training,
+  title={Training a spiking neural network with equilibrium propagation},
+  author={O’Connor, Peter and Gavves, Efstratios and Welling, Max},
+  booktitle=aistatsf,
+  abbr=aistats,
+  bibtex_show={true},
+  year={2019}
+}
+
+@article{hussein2019videograph,
+  title={Videograph: Recognizing minutes-long human activities in videos},
+  author={Hussein, Noureldien and Gavves, Efstratios and Smeulders, Arnold },
+  journal={arXiv preprint arXiv:1905.05143},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2019}
+}
+
+
+@inproceedings{gavves2021model,
+  title={Model decay in long-term tracking},
+  author={Gavves, Efstratios and Tao, Ran and Gupta, Deepak K and Smeulders, Arnold},
+  booktitle=icprf,
+  abbr=icpr,
+  bibtex_show={true},
+  year={2021}
+}
+
+@inproceedings{samson2019bet,
+  title={I bet you are wrong: Gambling adversarial networks for structured semantic seentation},
+  author={Samson, Laurens and van Noord, Nanne and Booij, Olaf and Hofmann, Michael and Gavves, Efstratios and Ghafoorian, Mohsen},
+  booktitle={International Conference on Computer Vision Workshops},
+  bibtex_show={true},
+  year={2019}
+}
+
+@inproceedings{chen20193d,
+  title={3d neighborhood convolution: Learning depth-aware features for rgb-d and rgb semantic seentation},
+  author={Chen, Yunlu and Mensink, Thomas and Gavves, Efstratios},
+  booktitle=dv3f,
+  abbr=dv3,
+  bibtex_show={true},
+  year={2019}
+}
+
+@article{davidson2019increasing,
+  title={Increasing Expressivity of a Hyperspherical VAE},
+  author={Davidson, Tim R and Tomczak, Jakub M and Gavves, Efstratios},
+  journal={arXiv preprint arXiv:1910.02912},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2019}
+}
+
+@article{van2019safecritic,
+  title={SafeCritic: Collision-aware trajectory prediction},
+  author={van der Heiden, Tessa and Nagaraja, Naveen Shankar and Weiss, Christian and Gavves, Efstratios},
+  journal={arXiv preprint arXiv:1910.06673},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2019}
+}
+
+@inproceedings{oh2019combinatorial,
+  title={Combinatorial bayesian optimization using the graph cartesian product},
+  author={Oh, Changyong and Tomczak, Jakub M and Gavves, Efstratios and Welling, Max},
+  booktitle=neuripsf,
+  abbr=neurips,
+  bibtex_show={true},
+  year={2019}
+}
+
+@article{hussein2020pic,
+  title={Pic: Permutation invariant convolution for recognizing long-range activities},
+  author={Hussein, Noureldien and Gavves, Efstratios and Smeulders, Arnold },
+  journal={arXiv preprint arXiv:2003.08275},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2020}
+}
+
+@inproceedings{panteli2020siamese,
+  title={Siamese tracking of cell behaviour patterns},
+  author={Panteli, Andreas and Gupta, Deepak K and Bruijn, Nathan and Gavves, Efstratios},
+  booktitle=midlf,
+  abbr=midl,
+  bibtex_show={true},
+  year={2020}
+}
+
+@article{van2020automatic,
+  title={Automatic triage of 12-lead ECGs using deep convolutional neural networks},
+  author={van de Leur, Rutger R and Blom, Lennart J and Gavves, Efstratios and Hof, Irene E and van der Heijden, Jeroen F and Clappers, Nick C and Doevendans, Pieter A and Hassink, Rutger J and van Es, Ren{\'e}},
+  journal={Journal of the American Heart Association},
+  bibtex_show={true},
+  year={2020}
+}
+
+
+@inproceedings{lippe2020categorical,
+  title={Categorical normalizing flows via continuous transformations},
+  author={Lippe, Phillip and Gavves, Efstratios},
+  booktitle=iclrf,
+  abbr=iclr,
+  bibtex_show={true},
+  year={2020},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{gupta2021tackling,
+  title={Tackling occlusion in Siamese tracking with structured dropouts},
+  author={Gupta, Deepak K and Gavves, Efstratios and Smeulders, Arnold },
+  booktitle=icprf,
+  abbr=icpr,
+  bibtex_show={true},
+  year={2021}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{pervez2020low,
+  title={Low Bias Low Variance Gradient Estimates for Hierarchical Boolean Stochastic Networks},
+  author={Pervez, Adeel and Cohen, Taco and Gavves, Efstratios},
+  booktitle=icmlf,
+  abbr=icml,
+  bibtex_show={true},
+  year={2020}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{chen2020pointmixup,
+  title={Pointmixup: Auentation for point clouds},
+  author={Chen, Yunlu and Hu, Vincent Tao and Gavves, Efstratios and Mensink, Thomas and Mettes, Pascal and Yang, Pengwan and Snoek, Cees },
+  booktitle=eccvf,
+  abbr=eccv,
+  bibtex_show={true},
+  year={2020}
+}
+
+@inproceedings{kilickaya2021self,
+  title={Self-selective context for interaction recognition},
+  author={Kilickaya, Mert and Hussein, Noureldien and Gavves, Efstratios and Smeulders, Arnold},
+  booktitle=icprf,
+  abbr=icpr,
+  bibtex_show={true},
+  year={2021}
+}
+
+@inproceedings{liao2021quasibinary,
+  title={Quasibinary Classifier for Images with Zero and Multiple Labels},
+  author={Liao, Shuai and Gavves, Efstratios and Oh, ChangYong and Snoek, Cees },
+  booktitle=icprf,
+  abbr=icpr,
+  bibtex_show={true},
+  year={2021}
+}
+
+@inproceedings{chen2020pointmixup,
+  title={PointMixup: Data Auentation for Point Clouds},
+  author={Chen, Yunlu and Hu, Vincent Tao and Gavves, Efstratios and Mensink, Thomas and Mettes, Pascal and Yang, Pengwan and Snoek, Cees},
+  booktitle=eccvf,
+  abbr=eccv,
+  bibtex_show={true},
+  year={2020}
+}
+
+@inproceedings{gupta2021rotation,
+  title={Rotation Equivariant Siamese Networks for Tracking},
+  author={Gupta, Deepak K and Arya, Devanshu and Gavves, Efstratios},
+  booktitle=cvprf,
+  abbr=cvpr,
+  bibtex_show={true},
+  year={2021},
+  selected={true}
+}
+
+@inproceedings{oh2021mixed,
+  title={Mixed Variable Bayesian Optimization with Frequency Modulated Kernels},
+  author={Oh, Changyong and Gavves, Efstratios and Welling, Max},
+  booktitle=uaif,
+  abbr=uai,
+  bibtex_show={true},
+  year={2021}
+}
+
+@article{oh2021batch,
+  title={Batch Bayesian Optimization on Permutations using Acquisition Weighted Kernels},
+  author={Oh, Changyong and Bondesan, Roberto and Gavves, Efstratios and Welling, Max},
+  journal={arXiv preprint arXiv:2102.13382},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2021}
+}
+
+@inproceedings{de2021transformers,
+  title={Transformers for Ischemic Stroke Infarct Core Seentation from Spatio-temporal CT Perfusion Scans},
+  author={de Vries, Lucas and Emmer, Bart and Majoie, Charles and Marquering, Henk and Gavves, Efstratios},
+  booktitle=midlf,
+  abbr=midl,
+  bibtex_show={true},
+  year={2021}
+}
+
+
+@inproceedings{panteli2021sparse,
+  title={Sparse-Shot Learning for Extremely Many Localisations},
+  author={Panteli, Andreas and Teuwen, Jonas and Horlings, Hugo and Gavves, Efstratios},
+  booktitle=iccvf,
+  abbr=iccv,
+  bibtex_show={true},
+  year={2021},
+  selected={true}
+}
+
+@inproceedings{kristan2019seventh,
+  title={The seventh visual object tracking vot2019 challenge results},
+  author={Kristan, Matej and Matas, Jiri and Leonardis, Ales and Felsberg, Michael and Pflugfelder, Roman and Kamarainen, Joni-Kristian and ˇCehovin Zajc, Luka and Drbohlav, Ondrej and Lukezic, Alan and Berg, Amanda and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops},
+  bibtex_show={true},
+  year={2019}
+}
+
+@article{shi2021unsharp,
+  title={Unsharp Mask Guided Filtering},
+  author={Shi, Zenglin and Chen, Yunlu and Gavves, Efstratios and Mettes, Pascal and Snoek, Cees },
+  journal=tipf,
+  abbr=tip,
+  bibtex_show={true},
+  year={2021}
+}
+
+@inproceedings{pervez2020variance,
+  title={Variance Reduction in Hierarchical Variational Autoencoders},
+  author={Pervez, Adeel and Gavves, Efstratios},
+  booktitle=icmlf,
+  abbr=icml,
+  bibtex_show={true},
+  year={2020},
+  selected={true}
+}
+
+@article{reisser2021federated,
+  title={Federated mixture of experts},
+  author={Reisser, Matthias and Louizos, Christos and Gavves, Efstratios and Welling, Max},
+  journal={arXiv preprint arXiv:2107.06724},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2021}
+}
+
+@inproceedings{chen2021neural,
+  title={Neural Feature Matching in Implicit 3D Representations},
+  author={Chen, Yunlu and Fernando, Basura and Bilen, Hakan and Mensink, Thomas and Gavves, Efstratios},
+  booktitle=icmlf,
+  abbr=icml,
+  bibtex_show={true},
+  year={2021},
+  selected={true}
+}
+
+@inproceedings{pervez2021spectral,
+  title={Spectral Smoothing Unveils Phase Transitions in Hierarchical Variational Autoencoders},
+  author={Pervez, Adeel and Gavves, Efstratios},
+  booktitle=icmlf,
+  abbr=icml,
+  bibtex_show={true},
+  year={2021},
+  selected={true}
+}
+
+@article{schirris2021deepsmile,
+  title={DeepSMILE: Self-supervised heterogeneity-aware multiple instance learning for DNA damage response defect classification directly from H\&E whole-slide images},
+  author={Schirris, Yoni and Gavves, Efstratios and Nederlof, Iris and Horlings, Hugo Mark and Teuwen, Jonas},
+  journal={arXiv preprint arXiv:2107.09405},
+  abbr=arxiv,
+  year={2021}
+}
+
+@article{lippe2021efficient,
+  title={Efficient Neural Causal Discovery without Acyclicity Constraints},
+  author={Lippe, Phillip and Cohen, Taco and Gavves, Efstratios},
+  journal={arXiv preprint arXiv:2107.10483},
+  abbr=arxiv,
+  bibtex_show={true},
+  year={2021}
+}
+
+@article{zoetmulder2021automated,
+  title={Automated final lesion seentation in posterior circulation acute ischemic stroke using deep learning},
+  author={Zoetmulder, Riaan and Konduri, Praneeta R and Obdeijn, Iris V and Gavves, Efstratios and I{\v{s}}gum, Ivana and Majoie, Charles BLM and Dippel, Diederik WJ and Roos, Yvo BWEM and Goyal, Mayank and Mitchell, Peter J and others},
+  journal={Diagnostics},
+  bibtex_show={true},
+  year={2021}
+}
+
+
+@inproceedings{dal2021multiple,
+  title={Multiple-instance learning for assessing prognosis of ductal carcinoma in situ},
+  author={Dal Canton, F and van Seijen, M and Groen, E and Horlings, H and Lips, E and Gavves, E and Teuwen, J and Wesseling, J},
+  booktitle={European Congress on Pathology},
+  bibtex_show={true},
+  cust={test2},
+  year={2021}
+}
+
+@inproceedings{kofinas2021roto,
+  title={Roto-translated Local Coordinate Frames For Interacting Dynamical Systems},
+  author={Kofinas, Miltiadis and Nagaraja, Naveen Shankar and Gavves, Efstratios},
+  booktitle=neuripsf,
+  abbr=neurips,
+  bibtex_show={true},
+  cust={test1},
+  year={2021},
+  selected={true}
 }
